--- a/manifest.json
+++ b/manifest.json
@@ -14,6 +14,6 @@
             "38": "images/icon38.png"
         },
         "default_title": "我的时钟",
-        "default_popup": "popup.html"
+        "default_popup": "build/index.html"
     }
 }
