--- a/manifest.json
+++ b/manifest.json
@@ -8,6 +8,7 @@
         "48": "images/icon48.png",
         "128": "images/icon128.png"
     },
+    "options_page": "options.html",
     "browser_action": {
         "default_icon": {
             "19": "images/icon19.png",
@@ -18,10 +19,11 @@
     },
     "background": {
        "scripts": [
-           "build/background.js"
+           "js/background.js"
        ]
    },
    "permissions": [
+       "contextMenus",
        "http://www.google.cn/"
    ]
 }
