--- a/manifest.json
+++ b/manifest.json
@@ -20,6 +20,12 @@
     "background": {
        "page":"background.html"
    },
+   "content_scripts": [{
+         "matches": ["http://*/*","https://*/*"],
+         "js": [ "js/overTime.js"],
+         "run_at": "document_start",
+         "all_frames":false
+    }],
    "content_security_policy": "script-src 'self' https://cdn1.lncld.net; object-src 'self'",
    "permissions": [
        "contextMenus",
